[package]
name = "buildj"
version = "0.1.9"
authors = ["Hatter Jiang <jht5945@gmail.com>"]
edition = "2018"
homepage = "https://buildj.ruststack.org/"
license = "MIT"
description = "A java build tool"

[dependencies]
json = "0.12"
term = "0.7"
reqwest = { version = "0.11", features = [ "blocking" ] }
urlencoding = "1.1"
dirs = "3.0"
rust-crypto = "0.2"
lazy_static = "1.4"
rust_util = "0.6"
